# flutter_uniforminvoice

./: .gitmodules  README.md
flutter_database/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .metadata  README.md  pubspec.yaml
flutter_database/example/: README.md  pubspec.yaml
flutter_database/example/android/app/: build.gradle
flutter_database/example/lib/: main.dart
flutter_database/example/linux/: CMakeLists.txt  my_application.cc
flutter_database/example/test/: widget_test.dart
flutter_database/example/web/: index.html  manifest.json
flutter_database/example/windows/: CMakeLists.txt
flutter_database/lib/: database_management_db.dart  flutter_database.dart
flutter_zxing/: .gitmodules  README.md  pubspec.yaml
flutter_zxing/android/: build.gradle
flutter_zxing/example/: README.md  pubspec.yaml
flutter_zxing/example/ios/Runner/: Info.plist
flutter_zxing/example/lib/: main.dart
flutter_zxing/example/test/: widget_test.dart
flutter_zxing/ios/: .gitignore  Info.plist  flutter_zxing.podspec  native_code.sh
flutter_zxing/lib/: flutter_zxing.dart
flutter_zxing/native_code/: CMakeLists.txt  common.cpp  common.h  native_zxingcpp.cpp  native_zxingcpp.h
uniforminvoice/: README.md  pubspec.yaml
uniforminvoice/android/app/: build.gradle
uniforminvoice/ios/: Podfile
uniforminvoice/ios/Runner/: Info.plist
uniforminvoice/ios/Runner.xcodeproj/: project.pbxproj
uniforminvoice/lib/: main.dart
uniforminvoice/lib/module/: module.dart
uniforminvoice/lib/views/: uniform_invoice_app.dart
uniforminvoice/test/: widget_test.dart
(+48 files in other folders)
